# CPP

./: .gitignore
YT_TUTORIAL_BY_CHERNO/: doc.txt
YT_TUTORIAL_BY_CHERNO/STL/: CMakeLists.txt  doc.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/branch/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/class/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/enum/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/function/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/header/: CMakeLists.txt  doc.txt  log.cpp  log.h  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/loop/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/pointer/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/reference/: CMakeLists.txt  main.cpp  run.sh
YT_TUTORIAL_BY_CHERNO/veriable/: CMakeLists.txt  main.cpp  run.sh
learnCPP/15_Move_sementics_smart_pointer/: CMakeLists.txt  doc.txt  run.sh  smart_pointer.cpp
